feat: updated services, doctors, and fixed UI issues
- Added 11 new services to 'Our Key Programs' with images and details
- Refactored 'Who Will Benefit' section in About Us
- Fixed social media icons visibility on hover in Hero and Footer
- Refactored Doctors section to use dynamic JS rendering
- Fixed Google Maps iframe in Contact Us page
- Updated README.md with content management instructions

--- a/about_us.html
+++ b/about_us.html
@@ -38,21 +38,98 @@
 
         <section class="who-benefits" id="who-benefits">
             <h2 class="section-title-center">Who will benefits from our services:</h2>
-            <ul>
-                <li>✔ <strong>With Neurological conditions requiring intensive rehabilitation</strong> (Stroke, MS, GBS,
-                    spinal cord injury, Parkinson’s disease, traumatic brain injury, Dementia, Alzheimer's, Vertigo
-                    etc).</li>
-                <li>✔ <strong>With orthopedic conditions</strong> (Post hip & knee replacement, spine surgery, ligament
-                    reconstruction, Arthritis, Frozen shoulder, Spondylitis, Foot Deformities, Fractures, Heel/ Neck/
-                    Knee/ Back/ Shoulder Pain, Sports Injuries, Scoliosis, Tingling & Numbness).</li>
-                <li>✔ <strong>Pediatric Population</strong> (With Developmental delays, Cerebral Palsy, Learning
-                    disorders, Autism, Down's Syndrome, Hyperactivity Disorders, Attention Deficit disorders, Spina
-                    Bifida)</li>
-                <li>✔ <strong>Aged population</strong> (With reduced mobility, frequent falls, aches & pains, balance
-                    issues, Urinary Incontinence, Cognitive Decline)</li>
-                <li>✔ Any other condition requiring structured inpatient rehabilitation as determined by the consulting
-                    physiotherapist or referring physician.</li>
-            </ul>
+            <div class="benefits-grid">
+                <!-- Neurological -->
+                <div class="benefit-card">
+                    <img src="images/neurological_rehab.png" alt="Neurological Rehabilitation">
+                    <div class="card-content">
+                        <h3>Neurological</h3>
+                        <div class="benefit-details">
+                            <ul>
+                                <li>Stroke, MS, GBS</li>
+                                <li>Spinal cord injury</li>
+                                <li>Parkinson’s disease</li>
+                                <li>Traumatic brain injury</li>
+                                <li>Dementia, Alzheimer's</li>
+                                <li>Vertigo</li>
+                            </ul>
+                        </div>
+                        <button class="mobile-expand-btn" aria-label="Show details">
+                            <span class="arrow-icon">▼</span>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Orthopedic -->
+                <div class="benefit-card">
+                    <img src="images/orthopedic_rehab.png" alt="Orthopedic Rehabilitation">
+                    <div class="card-content">
+                        <h3>Orthopedic</h3>
+                        <div class="benefit-details">
+                            <ul>
+                                <li>Post hip & knee replacement</li>
+                                <li>Spine surgery</li>
+                                <li>Ligament reconstruction</li>
+                                <li>Arthritis, Frozen shoulder</li>
+                                <li>Spondylitis</li>
+                                <li>Foot Deformities, Fractures</li>
+                                <li>Sports Injuries, Scoliosis</li>
+                            </ul>
+                        </div>
+                        <button class="mobile-expand-btn" aria-label="Show details">
+                            <span class="arrow-icon">▼</span>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Pediatric -->
+                <div class="benefit-card">
+                    <img src="images/pediatric_rehab.png" alt="Pediatric Rehabilitation">
+                    <div class="card-content">
+                        <h3>Pediatric</h3>
+                        <div class="benefit-details">
+                            <ul>
+                                <li>Developmental delays</li>
+                                <li>Cerebral Palsy</li>
+                                <li>Learning disorders</li>
+                                <li>Autism, Down's Syndrome</li>
+                                <li>Hyperactivity Disorders</li>
+                                <li>Attention Deficit disorders</li>
+                                <li>Spina Bifida</li>
+                            </ul>
+                        </div>
+                        <button class="mobile-expand-btn" aria-label="Show details">
+                            <span class="arrow-icon">▼</span>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Old Age -->
+                <div class="benefit-card">
+                    <img src="images/geriatric_rehab.png" alt="Geriatric Rehabilitation">
+                    <div class="card-content">
+                        <h3>Old Age</h3>
+                        <div class="benefit-details">
+                            <ul>
+                                <li>Reduced mobility</li>
+                                <li>Frequent falls</li>
+                                <li>Aches & pains</li>
+                                <li>Balance issues</li>
+                                <li>Urinary Incontinence</li>
+                                <li>Cognitive Decline</li>
+                            </ul>
+                        </div>
+                        <button class="mobile-expand-btn" aria-label="Show details">
+                            <span class="arrow-icon">▼</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <p style="text-align: center; margin-top: 2rem; max-width: 800px; margin-left: auto; margin-right: auto;">
+                And any other condition requiring structured inpatient rehabilitation as determined by the consulting
+                physiotherapist or referring physician.
+            </p>
         </section>
 
         <section class="how-different" id="how-different">
