--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,9 @@
         <!-- Contact Information -->
         <section class="contact-info">
             <h2>Clinic Address</h2>
-            <p>📍 The Rehab House, Dr Purandare Hospital<br>
-                Opposite Girgaon Chowpatty, Charni Road, Mumbai 400007</p>
+            <p>📍 The Rehab House, <br>
+                Dr Purandare's Diagnostic Centre, 31-C, Dr. N. A. Purandare Rd, opposite Girgaon, Charni Road, Sea Face,
+                Chowpatty, W, Mumbai, Maharashtra 400007</p>
             <p>📞 <strong>9653699526 / 7208343583</strong></p>
             <p>🌐 <a href="https://www.therehabhouse.in">www.therehabhouse.in</a></p>
         </section>
@@ -57,30 +58,17 @@
         <!-- Google Map -->
         <section class="map">
             <h2>Find Us on Google Maps</h2>
-            <iframe src="https://maps.app.goo.gl/vdYch6uT79X749am7" width="100%" height="400" frameborder="0"
-                style="border:0;" allowfullscreen>
-            </iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15093.854625024152!2d72.7951355871582!3d18.955120000000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cfa4a6ebe40f%3A0x82625b645ee76a57!2sThe%20Rehab%20House!5e0!3m2!1sen!2sin!4v1770353800949!5m2!1sen!2sin"
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
         <!-- Doctors Section -->
         <section class="team">
             <h2 class="team-title">Meet Our Experts</h2>
             <div class="team-container">
-                <!-- Dr. Vidhi -->
-                <div class="team-member">
-                    <img src="images/dr-vidhi.webp" alt="Dr. Vidhi Dave" loading="lazy">
-                    <h3>Dr. Vidhi Dave</h3>
-                    <p>Specialist in Neurorehabilitation and Physiotherapy.</p>
-                    <button class="know-more-btn" onclick="openProfile('vidhi')">Know More</button>
-                </div>
-
-                <!-- Dr. Vinit -->
-                <div class="team-member">
-                    <img src="images/dr-vinit.webp" alt="Dr. Vinit Gada" loading="lazy">
-                    <h3>Dr. Vinit Gada</h3>
-                    <p>Expert in Orthopedic Rehabilitation and Pain Management.</p>
-                    <button class="know-more-btn" onclick="openProfile('vinit')">Know More</button>
-                </div>
+                <!-- Doctors will be injected here by JS -->
             </div>
         </section>
 
@@ -131,6 +119,8 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
+    <script src="js/doctors_data.js"></script>
+    <script src="js/doctors.js"></script>
     <script src="js/header_footer.js" defer></script>
     <script src="js/main.js" defer></script>
 </body>
