--- a/services.html
+++ b/services.html
@@ -45,56 +45,97 @@
             <hr><br>
             <div class="service-container">
                 <!-- Service Cards -->
+                <!-- Service Cards -->
                 <div class="service-card">
-                    <img src="images/balance-training.webp" alt="Balance & Postural Control" loading="lazy" width="600"
-                        height="600">
+                    <img src="images/physiotherapy.png" alt="Physiotherapy" loading="lazy" width="600" height="600">
                     <div class="service-content">
-                        <h3>Balance & Postural Control</h3>
+                        <h3>Physiotherapy</h3>
                         <a href="service_detail.html?id=service1" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
                 <div class="service-card">
-                    <img src="images/vestibular-therapy.webp" alt="Vestibular Rehabilitation" loading="lazy" width="600"
+                    <img src="images/occupational_therapy.png" alt="Occupational Therapy" loading="lazy" width="600"
                         height="600">
                     <div class="service-content">
-                        <h3>Vestibular Rehabilitation</h3>
+                        <h3>Occupational Therapy</h3>
                         <a href="service_detail.html?id=service2" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
                 <div class="service-card">
-                    <img src="images/visual-therapy.webp" alt="Visual Therapy" loading="lazy" width="600" height="600">
+                    <img src="images/speech_therapy.png" alt="Speech Therapy" loading="lazy" width="600" height="600">
                     <div class="service-content">
-                        <h3>Visual Therapy</h3>
+                        <h3>Speech Therapy</h3>
                         <a href="service_detail.html?id=service3" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
                 <div class="service-card">
-                    <img src="images/spasticity-management.webp" alt="Spasticity & Posture Management" loading="lazy"
-                        width="600" height="600">
+                    <img src="images/cognitive_therapy.png" alt="Cognitive Therapy" loading="lazy" width="600"
+                        height="600">
                     <div class="service-content">
-                        <h3>Spasticity & Posture Management</h3>
+                        <h3>Cognitive Therapy</h3>
                         <a href="service_detail.html?id=service4" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
                 <div class="service-card">
-                    <img src="images/cognitive-training.webp" alt="Cognition-Enhancing Activities" loading="lazy"
-                        width="600" height="600">
+                    <img src="images/psychologist.png" alt="Psychologist" loading="lazy" width="600" height="600">
                     <div class="service-content">
-                        <h3>Cognition-Enhancing Activities</h3>
+                        <h3>Psychologist</h3>
                         <a href="service_detail.html?id=service5" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
                 <div class="service-card">
-                    <img src="images/pain-management.webp" alt="Pain Management" loading="lazy" width="600"
-                        height="600">
+                    <img src="images/pain_management.png" alt="Pain Management" loading="lazy" width="600" height="600">
                     <div class="service-content">
                         <h3>Pain Management</h3>
                         <a href="service_detail.html?id=service6" class="btn-know-more">Know More</a>
+                    </div>
+                </div>
+
+                <div class="service-card">
+                    <img src="images/dietitian.png" alt="Dietitian" loading="lazy" width="600" height="600">
+                    <div class="service-content">
+                        <h3>Dietitian</h3>
+                        <a href="service_detail.html?id=service7" class="btn-know-more">Know More</a>
+                    </div>
+                </div>
+
+                <div class="service-card">
+                    <img src="images/robotic_rehab.png" alt="Robotic Rehabilitation Therapy" loading="lazy" width="600"
+                        height="600">
+                    <div class="service-content">
+                        <h3>Robotic Rehabilitation Therapy</h3>
+                        <a href="service_detail.html?id=service8" class="btn-know-more">Know More</a>
+                    </div>
+                </div>
+
+                <div class="service-card">
+                    <img src="images/yoga_therapy.png" alt="Yoga" loading="lazy" width="600" height="600">
+                    <div class="service-content">
+                        <h3>Yoga</h3>
+                        <a href="service_detail.html?id=service9" class="btn-know-more">Know More</a>
+                    </div>
+                </div>
+
+                <div class="service-card">
+                    <img src="images/fitness_training.png" alt="Fitness Training" loading="lazy" width="600"
+                        height="600">
+                    <div class="service-content">
+                        <h3>Fitness Training</h3>
+                        <a href="service_detail.html?id=service10" class="btn-know-more">Know More</a>
+                    </div>
+                </div>
+
+                <div class="service-card">
+                    <img src="images/orthotic_therapy.png" alt="Orthotic Therapy" loading="lazy" width="600"
+                        height="600">
+                    <div class="service-content">
+                        <h3>Orthotic Therapy</h3>
+                        <a href="service_detail.html?id=service11" class="btn-know-more">Know More</a>
                     </div>
                 </div>
             </div>
