--- a/contact.html
+++ b/contact.html
@@ -82,16 +82,30 @@
                 <label for="issue">Describe Your Issue</label>
                 <textarea id="issue" name="issue" rows="4" required></textarea>
 
-                <label for="service">Select Service</label>
-                <select id="service" name="service" required>
-                    <option value="">Choose a Service</option>
+                <label for="serviceMode">Service Mode</label>
+                <select id="serviceMode" name="serviceMode" required>
+                    <option value="">Choose a Service Mode</option>
                     <option value="Clinic Appointment">Clinic Appointment</option>
                     <option value="Home Visit">Home Visit</option>
                     <option value="Online Consultation">Online Consultation</option>
-                    <option value="Physiotherapy">Physiotherapy</option>
+                </select>
+
+                <label for="serviceType">Service Type</label>
+                <select id="serviceType" name="serviceType" required>
+                    <option value="">Choose a Service Type</option>
                     <option value="Neurorehabilitation">Neurorehabilitation</option>
+                    <option value="Occupational Therapy">Occupational Therapy</option>
+                    <option value="Speech & Swallow Therapy">Speech & Swallow Therapy</option>
+                    <option value="Pediatric Therapy">Pediatric Therapy</option>
+                    <option value="Cognitive Therapy">Cognitive Therapy</option>
+                    <option value="Psychology Therapy">Psychology Therapy</option>
+                    <option value="Dietician Therapy">Dietician Therapy</option>
+                    <option value="Orthotic Therapy">Orthotic Therapy</option>
+                    <option value="Neurologist Consultation">Neurologist Consultation</option>
+                    <option value="Ortho Physiotherapy">Ortho Physiotherapy</option>
                     <option value="Pain Management">Pain Management</option>
-                    <option value="Orthopedic Therapy">Orthopedic Therapy</option>
+                    <option value="Robotic Rehabilitation Therapy">Robotic Rehabilitation Therapy</option>
+                    <option value="Fitness Training">Fitness Training</option>
                 </select>
 
                 <label for="phone">Phone Number</label>
