--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,16 @@
         <!-- Doctors Section -->
         <section class="team">
             <h2 class="team-title">Meet Our Experts</h2>
-            <div class="team-container">
-                <!-- Doctors will be injected here by JS -->
+
+            <!-- Founders Section -->
+            <div id="founders-container" class="team-container founders-layout">
+                <!-- Founders injected by JS -->
+            </div>
+
+            <!-- Rest of Team Section -->
+            <h3 class="team-subtitle">Our Specialists</h3>
+            <div id="team-grid" class="specialists-grid">
+                <!-- Specialists injected by JS -->
             </div>
         </section>
 
