--- a/profiles/dr-sakshi.html
+++ b/profiles/dr-sakshi.html
@@ -8,7 +8,7 @@
     <br>
     <p><strong>Her Expertise Include:</strong></p>
     <ul>
-        <li>Functional Rehabilitation</li>
+        <li>Expertise in Functional Rehabilitation</li>
         <li>Cognitive Perceptual Therapy</li>
         <li>Behavioural Interventions</li>
         <li>Certified Ergonomic Therapist</li>
