feat: Modernize footer, polish UI/UX, and add mobile sticky CTA

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section (Full Width) -->
-    <section class="hero hero-home" id="hero">
+    <section class="hero hero-home fade-in-section" id="hero">
         <div class="hero-content">
             <h1>South Mumbai’s Leading Neuro & Ortho Rehabilitation Centre</h1>
             <p>Expert Care for Stroke, Parkinson’s, Spine Injury & Post-Surgery Recovery</p>
@@ -85,7 +85,7 @@
     </section>
 
     <!-- Google Reviews Marquee (Full Width) -->
-    <section class="google-reviews-section">
+    <section class="google-reviews-section fade-in-section">
         <h2 style="text-align: center; margin-bottom: 20px; color: var(--primary-color);">Patient Testimonials</h2>
         <div class="google-reviews-container">
             <div class="marquee-content" id="reviews-marquee">
@@ -101,7 +101,7 @@
     <main>
 
         <!-- Highlights Section -->
-        <section class="highlights" id="highlights">
+        <section class="highlights fade-in-section" id="highlights">
             <h2>Highlights</h2>
             <div class="highlight-grid">
                 <!-- Wheelchair -->
